# prelegal

./: .gitignore  AGENTS.md  Dockerfile  README.md  catalog.json  docker-compose.yml
backend/: Dockerfile  main.py  pyproject.toml
backend/tests/: test_auth_documents.py  test_document_session_integration.py
frontend/: Dockerfile  package-lock.json  package.json  vitest.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/login/: page.tsx
frontend/src/components/: NDAForm.test.tsx  NDAForm.tsx  NDAPreview.test.tsx  NDAPreview.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/utils/: dateUtils.test.ts  dateUtils.ts
scripts/: start-linux.sh  start-mac.sh  start-windows.ps1  stop-linux.sh  stop-mac.sh  stop-windows.ps1
templates/: LICENSE  baa.md  csa.md  design_partner_agreement.md  dpa.md  mutual_nda.md  mutual_nda_coverpage.md  partnership_agreement.md  pilot_agreement.md  psa.md  sla.md  software_license_agreement.md
